LHA decompression - phase 1 - now you can decompress LZH file through UI

--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_en_US.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_en_US.properties
@@ -65,6 +65,8 @@ ACTIVITY_VIEWER=Activity Viewer
 ACTIVITY_VIEWER_MNEMONIC=A
 PATCH_CENTER=Patch Center
 PATCH_CENTER_MNEMONIC=P
+LHA_DECOMPRESSOR=LHA Decompressor
+LHA_DECOMPRESSOR_MNEMONIC=L
 COUNT=Total
 CHANGE_MACHINE=Change Machine
 CHANGE_MACHINE_MNEMONIC=M
