LHA decompression - phase 2 - handle when extracted file exists already plus a lot of refactoring

--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_en_US.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_en_US.properties
@@ -65,8 +65,8 @@ ACTIVITY_VIEWER=Activity Viewer
 ACTIVITY_VIEWER_MNEMONIC=A
 PATCH_CENTER=Patch Center
 PATCH_CENTER_MNEMONIC=P
-LHA_DECOMPRESSOR=LHA Decompressor
-LHA_DECOMPRESSOR_MNEMONIC=L
+LHA_EXTRACTOR=LHA Extractor
+LHA_EXTRACTOR_MNEMONIC=L
 COUNT=Total
 CHANGE_MACHINE=Change Machine
 CHANGE_MACHINE_MNEMONIC=M
@@ -120,3 +120,4 @@ ERR_FILE_TO_PATCH_NOT_PATCHABLE=File cannot be patched
 ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=Checksum of the source file doesn't match the given checksum
 ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=Compressed source file cannot be patched directly. Specify a target file
 ERR_EMPTY_CHECKSUM=Checksum field cannot be empty
+ERR_COMPRESSED_FILE_NOT_FOUND=Compressed file not found
