LHA decompression - phase 3 - added extracted operation details to confirmation popup and improved popup when extracted file already exists in destination

--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/LHAExtractorWindow_en_US.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/LHAExtractorWindow_en_US.properties
@@ -5,5 +5,7 @@ OUTPUT=Output
 DIRECTORY=Directory
 SPECIFY_DIRECTORY=Specify Directory
 USE_SAME_DIRECTORY_AS_FILE=Use Same Directory As Compressed File
-FILE_EXTRACTOR_SUCCESSFULLY=File was extracted successfully
-CONFIRM_REPLACE_EXTRACTED_FILE_MSG=Extracted file already exists. Replace?
+CONFIRM_REPLACE_EXTRACTED_FILE_MSG=exists already. Replace?
+TOTAL_FILES=Total files
+TOTAL_MSX_IMAGES=Total MSX Images
+TOTAL_EXTRACTED_FILES=Total extracted files
