LHA decompression - languages

--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ca_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ca_ES.properties
@@ -65,6 +65,8 @@ ACTIVITY_VIEWER=Visualitzador d'activitats
 ACTIVITY_VIEWER_MNEMONIC=V
 PATCH_CENTER=Centre de pedaç
 PATCH_CENTER_MNEMONIC=C
+LHA_EXTRACTOR=Extractor de LHA
+LHA_EXTRACTOR_MNEMONIC=L
 COUNT=Total
 CHANGE_MACHINE=Canvia màquina
 CHANGE_MACHINE_MNEMONIC=M
@@ -72,6 +74,9 @@ UPDATE_ALL_DATABASES=Actualitzar totes les bases de dades
 UPDATE_ALL_DATABASES_MNEMONIC=A
 TOTAL_UPDATED_PROFILES=Nombre de perfils actualitzats
 VIDEO_SOURCE=Origen del vídeo
+INPUT=Entrada
+OUTPUT=Sortida
+DIRECTORY=Carpeta
 
 BR=Brasil
 DE=Alemanya
