--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_de_DE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_de_DE.properties
@@ -65,6 +65,8 @@ ACTIVITY_VIEWER=Aktivitätsanzeige
 ACTIVITY_VIEWER_MNEMONIC=A
 PATCH_CENTER=Patch-Center
 PATCH_CENTER_MNEMONIC=P
+LHA_EXTRACTOR=LHA-Extraktor
+LHA_EXTRACTOR_MNEMONIC=L
 COUNT=Gesamt
 CHANGE_MACHINE=Maschine wechseln
 CHANGE_MACHINE_MNEMONIC=M
@@ -72,6 +74,9 @@ UPDATE_ALL_DATABASES=Aller Datenbanken aktualisieren
 UPDATE_ALL_DATABASES_MNEMONIC=A
 TOTAL_UPDATED_PROFILES=Zahl der aktualisierte Profile
 VIDEO_SOURCE=Videoquelle
+INPUT=Eingabe
+OUTPUT=Ausgabe
+DIRECTORY=Ordner
 
 BR=Brasilien
 DE=Deutschland
