--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_en_US.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_en_US.properties
@@ -74,6 +74,9 @@ UPDATE_ALL_DATABASES=Update All Databases
 UPDATE_ALL_DATABASES_MNEMONIC=U
 TOTAL_UPDATED_PROFILES=Total updated profiles
 VIDEO_SOURCE=Video Source
+INPUT=Input
+OUTPUT=Output
+DIRECTORY=Directory
 
 BR=Brazil
 DE=Germany
