--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_es_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_es_ES.properties
@@ -65,6 +65,8 @@ ACTIVITY_VIEWER=Visor de actividades
 ACTIVITY_VIEWER_MNEMONIC=V
 PATCH_CENTER=Centro de parche
 PATCH_CENTER_MNEMONIC=C
+LHA_EXTRACTOR=Extractor de LHA
+LHA_EXTRACTOR_MNEMONIC=L
 COUNT=Total
 CHANGE_MACHINE=Cambiar máquina
 CHANGE_MACHINE_MNEMONIC=M
@@ -72,6 +74,9 @@ UPDATE_ALL_DATABASES=Actualizar todas las bases de datos
 UPDATE_ALL_DATABASES_MNEMONIC=A
 TOTAL_UPDATED_PROFILES=Número de perfiles actualizados
 VIDEO_SOURCE=Origen de vídeo
+INPUT=Entrada
+OUTPUT=Resultados
+DIRECTORY=Carpeta
 
 BR=Brasil
 DE=Alemania
