--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fa_IR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fa_IR.properties
@@ -65,6 +65,8 @@ ACTIVITY_VIEWER=\u0646\u0645\u0627\u06CC\u0634 \u062F\u0647\u0646\u062F\u0647 \u
 ACTIVITY_VIEWER_MNEMONIC=X
 PATCH_CENTER=\u0645\u0631\u06A9\u0632 \u0648\u0635\u0644\u0647
 PATCH_CENTER_MNEMONIC=X
+LHA_EXTRACTOR=LHA \u0627\u0633\u062A\u062E\u0631\u0627\u062C \u06A9\u0646\u0646\u062F\u0647
+LHA_EXTRACTOR_MNEMONIC=X
 COUNT=\u062A\u0639\u062F\u0627\u062F
 CHANGE_MACHINE=\u062A\u063A\u06CC\u06CC\u0631 \u062F\u0633\u062A\u06AF\u0627\u0647
 CHANGE_MACHINE_MNEMONIC=X
@@ -72,6 +74,9 @@ UPDATE_ALL_DATABASES=\u0628\u0647 \u0631\u0648\u0632 \u0631\u0633\u0627\u0646\u0
 UPDATE_ALL_DATABASES_MNEMONIC=X
 TOTAL_UPDATED_PROFILES=\u062A\u0639\u062F\u0627\u062F \u067E\u0631\u0648\u0641\u0627\u06CC\u0644 \u0647\u0627\u06CC \u0628\u0647 \u0631\u0648\u0632 \u0634\u062F\u0647
 VIDEO_SOURCE=\u0645\u0646\u0628\u0639 \u0648\u06CC\u062F\u06CC\u0648
+INPUT=\u0648\u0631\u0648\u062F\u06CC
+OUTPUT=\u062E\u0631\u0648\u062C\u06CC
+DIRECTORY=\u067E\u0648\u0634\u0647
 
 BR=\u0628\u0631\u0632\u06CC\u0644
 DE=\u0622\u0644\u0645\u0627\u0646
