--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fi_FI.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fi_FI.properties
@@ -65,6 +65,8 @@ ACTIVITY_VIEWER=Käytön katseluohjelma
 ACTIVITY_VIEWER_MNEMONIC=K
 PATCH_CENTER=Patch keskus
 PATCH_CENTER_MNEMONIC=P
+LHA_EXTRACTOR=LHA: n poimintatoiminto
+LHA_EXTRACTOR_MNEMONIC=L
 COUNT=Summa
 CHANGE_MACHINE=Vaihda tietokone
 CHANGE_MACHINE_MNEMONIC=V
@@ -72,6 +74,9 @@ UPDATE_ALL_DATABASES=Päivittää kaikki tietokannat
 UPDATE_ALL_DATABASES_MNEMONIC=P
 TOTAL_UPDATED_PROFILES=Määrä päivitetty profiileja
 VIDEO_SOURCE=Videolähde
+INPUT=Syöttö
+OUTPUT=Tulos
+DIRECTORY=Kansio
 
 BR=Brasilia
 DE=Saksa
