--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fr_FR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fr_FR.properties
@@ -65,6 +65,8 @@ ACTIVITY_VIEWER=Visionneuse d'activité
 ACTIVITY_VIEWER_MNEMONIC=V
 PATCH_CENTER=Centre de correctif
 PATCH_CENTER_MNEMONIC=C
+LHA_EXTRACTOR=Extracteur de LHA
+LHA_EXTRACTOR_MNEMONIC=L
 COUNT=Total
 CHANGE_MACHINE=Changer machine
 CHANGE_MACHINE_MNEMONIC=M
@@ -72,6 +74,9 @@ UPDATE_ALL_DATABASES=Mettre à jour toutes les bases de données
 UPDATE_ALL_DATABASES_MNEMONIC=M
 TOTAL_UPDATED_PROFILES=Nombre de profils mis à jour
 VIDEO_SOURCE=Source vidéo
+INPUT=Entrée
+OUTPUT=Résultats
+DIRECTORY=Dossier
 
 BR=Brésil
 DE=Allemagne
