--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_it_IT.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_it_IT.properties
@@ -65,6 +65,8 @@ ACTIVITY_VIEWER=Visualizzatore attività
 ACTIVITY_VIEWER_MNEMONIC=V
 PATCH_CENTER=Centro patch
 PATCH_CENTER_MNEMONIC=C
+LHA_EXTRACTOR=Estrattore di LHA
+LHA_EXTRACTOR_MNEMONIC=L
 COUNT=Totale
 CHANGE_MACHINE=Cambia macchina
 CHANGE_MACHINE_MNEMONIC=M
@@ -72,6 +74,9 @@ UPDATE_ALL_DATABASES=Aggiorna tutti i database
 UPDATE_ALL_DATABASES_MNEMONIC=A
 TOTAL_UPDATED_PROFILES=Numero di profili aggiornati
 VIDEO_SOURCE=Origine video
+INPUT=Input
+OUTPUT=Output
+DIRECTORY=Cartella
 
 BR=Brasile
 DE=Germania
