--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ja_JP.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ja_JP.properties
@@ -65,6 +65,8 @@ ACTIVITY_VIEWER=\u6D3B\u52D5\u30D3\u30E5\u30FC\u30A2
 ACTIVITY_VIEWER_MNEMONIC=X
 PATCH_CENTER=\u30D1\u30C3\u30C1\u30BB\u30F3\u30BF\u30FC
 PATCH_CENTER_MNEMONIC=X
+LHA_EXTRACTOR=LHA\u62BD\u51FA
+LHA_EXTRACTOR_MNEMONIC=X
 COUNT=\u5408\u8A08
 CHANGE_MACHINE=\u30DE\u30B7\u30F3\u306E\u5909\u66F4
 CHANGE_MACHINE_MNEMONIC=X
@@ -72,6 +74,9 @@ UPDATE_ALL_DATABASES=\u3059\u3079\u3066\u306E\u30C7\u30FC\u30BF\u30D9\u30FC\u30B
 UPDATE_ALL_DATABASES_MNEMONIC=X
 TOTAL_UPDATED_PROFILES=\u66F4\u65B0\u3055\u308C\u305F\u30D7\u30ED\u30D5\u30A1\u30A4\u30EB\u306E\u6570
 VIDEO_SOURCE=\u30D3\u30C7\u30AA \u30BD\u30FC\u30B9
+INPUT=\u5165\u529B
+OUTPUT=\u51FA\u529B
+DIRECTORY=\u30D5\u30A9\u30EB\u30C0
 
 BR=\u30D6\u30E9\u30B8\u30EB
 DE=\u30C9\u30A4\u30C4
