--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_nl_NL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_nl_NL.properties
@@ -65,6 +65,8 @@ ACTIVITY_VIEWER=Activiteitenviewer
 ACTIVITY_VIEWER_MNEMONIC=A
 PATCH_CENTER=Patchcentrum
 PATCH_CENTER_MNEMONIC=P
+LHA_EXTRACTOR=LHA-extractor
+LHA_EXTRACTOR_MNEMONIC=L
 COUNT=Telling
 CHANGE_MACHINE=Machine wijzigen
 CHANGE_MACHINE_MNEMONIC=M
@@ -72,6 +74,9 @@ UPDATE_ALL_DATABASES=Bijwerken alle databases
 UPDATE_ALL_DATABASES_MNEMONIC=B
 TOTAL_UPDATED_PROFILES=Aantal bijgewerkt profielen
 VIDEO_SOURCE=Videobron
+INPUT=Invoer
+OUTPUT=Uitvoer
+DIRECTORY=Map
 
 BR=Brazilië
 DE=Duitsland
