--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pl_PL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pl_PL.properties
@@ -65,6 +65,8 @@ ACTIVITY_VIEWER=Podgl\u0105d aktywno\u015Bci
 ACTIVITY_VIEWER_MNEMONIC=P
 PATCH_CENTER=Centrum poprawka
 PATCH_CENTER_MNEMONIC=C
+LHA_EXTRACTOR=Ekstraktor LHA
+LHA_EXTRACTOR_MNEMONIC=L
 COUNT=Suma
 CHANGE_MACHINE=Zmienianie komputer
 CHANGE_MACHINE_MNEMONIC=Z
@@ -72,6 +74,9 @@ UPDATE_ALL_DATABASES=Aktualizacja wszystkich baz
 UPDATE_ALL_DATABASES_MNEMONIC=A
 TOTAL_UPDATED_PROFILES=Llo\u015B\u0107 zaktualizowane profile
 VIDEO_SOURCE=\u0179ród\u0142o wideo
+INPUT=Dane wej\u015Bciowe
+OUTPUT=Dane wyj\u015Bciowe
+DIRECTORY=Folder
 
 BR=Brazylia
 DE=Niemcy
