--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_zh_CN.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_zh_CN.properties
@@ -65,6 +65,8 @@ ACTIVITY_VIEWER=\u6D3B\u52A8\u67E5\u770B\u5668
 ACTIVITY_VIEWER_MNEMONIC=X
 PATCH_CENTER=\u4FEE\u8865\u4E2D\u5FC3
 PATCH_CENTER_MNEMONIC=X
+LHA_EXTRACTOR=BMP \u63D0\u53D6\u7A0B\u5E8F
+LHA_EXTRACTOR_MNEMONIC=X
 COUNT=\u603B\u8BA1
 CHANGE_MACHINE=\u66F4\u6539\u673A\u5668
 CHANGE_MACHINE_MNEMONIC=X
@@ -72,6 +74,9 @@ UPDATE_ALL_DATABASES=\u66F4\u65B0\u6240\u6709\u6570\u636E\u5E93
 UPDATE_ALL_DATABASES_MNEMONIC=X
 TOTAL_UPDATED_PROFILES=\u66F4\u65B0\u7684\u914D\u7F6E\u6587\u4EF6\u6570\u91CF
 VIDEO_SOURCE=\u89C6\u9891\u6E90
+INPUT=\u8F93\u5165
+OUTPUT=\u8F93\u51FA
+DIRECTORY=\u6587\u4EF6\u5939
 
 BR=\u5DF4\u897F
 DE=\u5FB7\u56FD
