--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_zh_TW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_zh_TW.properties
@@ -65,6 +65,8 @@ ACTIVITY_VIEWER=\u6D3B\u52D5\u6AA2\u8996\u5668
 ACTIVITY_VIEWER_MNEMONIC=X
 PATCH_CENTER=\u4FEE\u88DC\u4E2D\u5FC3
 PATCH_CENTER_MNEMONIC=X
+LHA_EXTRACTOR=LHA \u62BD\u53D6\u5668
+LHA_EXTRACTOR_MNEMONIC=X
 COUNT=\u7E3D\u5171
 CHANGE_MACHINE=\u8B8A\u66F4\u6A5F\u5668
 CHANGE_MACHINE_MNEMONIC=X
@@ -72,6 +74,9 @@ UPDATE_ALL_DATABASES=\u66F4\u65B0\u6240\u6709\u6578\u64DA\u5EAB
 UPDATE_ALL_DATABASES_MNEMONIC=X
 TOTAL_UPDATED_PROFILES=\u66F4\u65B0\u7684\u914D\u7F6E\u6587\u4EF6\u6578\u91CF
 VIDEO_SOURCE=\u8996\u8A0A\u4F86\u6E90
+INPUT=\u8F38\u5165
+OUTPUT=\u8F38\u51FA
+DIRECTORY=\u8CC7\u6599\u593E
 
 BR=\u5DF4\u897F
 DE=\u5FB7\u570B
