--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ar_KW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ar_KW.properties
@@ -65,6 +65,8 @@ ACTIVITY_VIEWER=\u0639\u0627\u0631\u0636 \u0627\u0644\u0623\u0646\u0634\u0637\u0
 ACTIVITY_VIEWER_MNEMONIC=X
 PATCH_CENTER=\u0645\u0631\u0643\u0632 \u0627\u0644\u062A\u0635\u062D\u064A\u062D
 PATCH_CENTER_MNEMONIC=X
+LHA_EXTRACTOR=LHA\u0645\u064F\u0633\u062A\u062E\u0631\u0650\u062C \u0627\u0644
+LHA_EXTRACTOR_MNEMONIC=X
 COUNT=\u0627\u0644\u0645\u062C\u0645\u0648\u0639
 CHANGE_MACHINE=\u062A\u063A\u064A\u064A\u0631 \u0627\u0644\u062C\u0647\u0627\u0632
 CHANGE_MACHINE_MNEMONIC=X
@@ -72,6 +74,9 @@ UPDATE_ALL_DATABASES=\u062A\u062D\u062F\u064A\u062B \u0643\u0627\u0641\u0629 \u0
 UPDATE_ALL_DATABASES_MNEMONIC=X
 TOTAL_UPDATED_PROFILES=\u0639\u062F\u062F \u0645\u0644\u0641\u0627\u062A \u0627\u0644\u062A\u0639\u0631\u064A\u0641 \u0627\u0644\u0645\u062D\u062F\u0651\u062B\u0629
 VIDEO_SOURCE=\u0645\u0635\u062F\u0631 \u0627\u0644\u0641\u064A\u062F\u064A\u0648
+INPUT=\u0627\u0644\u0625\u062F\u062E\u0627\u0644
+OUTPUT=\u0627\u0644\u0646\u0627\u062A\u062C
+DIRECTORY=\u0645\u062C\u0644\u062F
 
 BR=\u0627\u0644\u0628\u0631\u0627\u0632\u064A\u0644
 DE=\u0623\u0644\u0645\u0627\u0646\u064A\u0627
