--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ko_KR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ko_KR.properties
@@ -65,6 +65,8 @@ ACTIVITY_VIEWER=\uC791\uC5C5 \uBDF0\uC5B4
 ACTIVITY_VIEWER_MNEMONIC=X
 PATCH_CENTER=\uD328\uCE58 \uC13C\uD130
 PATCH_CENTER_MNEMONIC=X
+LHA_EXTRACTOR=LHA \uCD94\uCD9C\uAE30
+LHA_EXTRACTOR_MNEMONIC=X
 COUNT=\uCD1D\uACC4
 CHANGE_MACHINE=\uCEF4\uD4E8\uD130 \uBCC0\uACBD
 CHANGE_MACHINE_MNEMONIC=X
@@ -72,6 +74,9 @@ UPDATE_ALL_DATABASES=\uBAA8\uB4E0 \uB370\uC774\uD130\uBCA0\uC774\uC2A4\uB97C \uC
 UPDATE_ALL_DATABASES_MNEMONIC=X
 TOTAL_UPDATED_PROFILES=\uC5C5\uB370\uC774\uD2B8 \uB41C \uD504\uB85C\uD544\uC758 \uC218
 VIDEO_SOURCE=\uBE44\uB514\uC624 \uC6D0\uBCF8
+INPUT=\uC785\uB825
+OUTPUT=\uCD9C\uB825
+DIRECTORY=\uD3F4\uB354
 
 BR=\uBE0C\uB77C\uC9C8
 DE=\uB3C5\uC77C
