--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pt_BR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pt_BR.properties
@@ -65,6 +65,8 @@ ACTIVITY_VIEWER=Visualizador de Atividades
 ACTIVITY_VIEWER_MNEMONIC=V
 PATCH_CENTER=Centro de patch
 PATCH_CENTER_MNEMONIC=C
+LHA_EXTRACTOR=Extrator de LHA
+LHA_EXTRACTOR_MNEMONIC=L
 COUNT=Total
 CHANGE_MACHINE=Mudar máquina
 CHANGE_MACHINE_MNEMONIC=M
@@ -72,6 +74,9 @@ UPDATE_ALL_DATABASES=Atualizar todos os banco de dados
 UPDATE_ALL_DATABASES_MNEMONIC=A
 TOTAL_UPDATED_PROFILES=Número de perfis atualizados
 VIDEO_SOURCE=Fonte de vídeo
+INPUT=Entrada
+OUTPUT=Saída
+DIRECTORY=Pasta
 
 BR=Brasil
 DE=Alemanha
