--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ru_RU.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ru_RU.properties
@@ -65,6 +65,8 @@ ACTIVITY_VIEWER=\u0421\u0440\u0435\u0434\u0441\u0442\u0432\u043E \u043F\u0440\u0
 ACTIVITY_VIEWER_MNEMONIC=X
 PATCH_CENTER=\u0418\u0441\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u0438\u0435 \u0446\u0435\u043D\u0442\u0440
 PATCH_CENTER_MNEMONIC=X
+LHA_EXTRACTOR=\u0421\u0440\u0435\u0434\u0441\u0442\u0432\u043E \u0438\u0437\u0432\u043B\u0435\u0447\u0435\u043D\u0438\u044F LHA
+LHA_EXTRACTOR_MNEMONIC=X
 COUNT=\u0418\u0442\u043E\u0433
 CHANGE_MACHINE=\u0421\u043C\u0435\u043D\u0438\u0442\u044C \u043A\u043E\u043C\u043F\u044C\u044E\u0442\u0435\u0440
 CHANGE_MACHINE_MNEMONIC=X
@@ -72,6 +74,9 @@ UPDATE_ALL_DATABASES=\u041E\u0431\u043D\u043E\u0432\u0438\u0442\u044C \u0432\u04
 UPDATE_ALL_DATABASES_MNEMONIC=X
 TOTAL_UPDATED_PROFILES=\u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u043E\u0431\u043D\u043E\u0432\u043B\u0435\u043D\u043D\u044B\u0445 \u043F\u0440\u043E\u0444\u0438\u043B\u0435\u0439
 VIDEO_SOURCE=\u0418\u0441\u0442\u043E\u0447\u043D\u0438\u043A \u0432\u0438\u0434\u0435\u043E
+INPUT=\u0412\u0445\u043E\u0434 - \u0434\u0430\u043D\u043D\u044B\u0435
+OUTPUT=\u0432\u044B\u0445\u043E\u0434
+DIRECTORY=\u041F\u0430\u043F\u043A\u0430
 
 BR=\u0411\u0440\u0430\u0437\u0438\u043B\u0438\u044F
 DE=\u0413\u0435\u0440\u043C\u0430\u043D\u0438\u044F
