--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_sv_SE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_sv_SE.properties
@@ -65,6 +65,8 @@ ACTIVITY_VIEWER=Aktivitetsgranskaren
 ACTIVITY_VIEWER_MNEMONIC=A
 PATCH_CENTER=Korrigering-center
 PATCH_CENTER_MNEMONIC=K
+LHA_EXTRACTOR=Extraherare för LHA
+LHA_EXTRACTOR_MNEMONIC=L
 COUNT=Summa
 CHANGE_MACHINE=Ändra maskin
 CHANGE_MACHINE_MNEMONIC=M
@@ -72,6 +74,9 @@ UPDATE_ALL_DATABASES=Uppdatera alla databaser
 UPDATE_ALL_DATABASES_MNEMONIC=U
 TOTAL_UPDATED_PROFILES=Antal uppdaterade profiler
 VIDEO_SOURCE=Videokälla
+INPUT=Indata
+OUTPUT=Utdata
+DIRECTORY=Mapp
 
 BR=Brasilien
 DE=Tyskland
