--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ar_KW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ar_KW.properties
@@ -65,7 +65,7 @@ ACTIVITY_VIEWER=\u0639\u0627\u0631\u0636 \u0627\u0644\u0623\u0646\u0634\u0637\u0
 ACTIVITY_VIEWER_MNEMONIC=X
 PATCH_CENTER=\u0645\u0631\u0643\u0632 \u0627\u0644\u062A\u0635\u062D\u064A\u062D
 PATCH_CENTER_MNEMONIC=X
-LHA_EXTRACTOR=LHA\u0645\u064F\u0633\u062A\u062E\u0631\u0650\u062C \u0627\u0644
+LHA_EXTRACTOR=\u0645\u064F\u0633\u062A\u062E\u0631\u0650\u062C \u0627\u0644\u0645\u0644\u0641\u0627\u062A (LHA) \u0627\u0644\u0645\u0636\u063A\u0648\u0637\u0629
 LHA_EXTRACTOR_MNEMONIC=X
 COUNT=\u0627\u0644\u0645\u062C\u0645\u0648\u0639
 CHANGE_MACHINE=\u062A\u063A\u064A\u064A\u0631 \u0627\u0644\u062C\u0647\u0627\u0632
