LHA decompression - language fix

--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ca_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ca_ES.properties
@@ -123,3 +123,4 @@ ERR_FILE_TO_PATCH_NOT_PATCHABLE=No s'ha pogut aplicar el pedaç al fitxer
 ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=Suma de comprovació incorrecta
 ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=El fitxer comprimit no pot ser pedaç directament. Especifiqueu un fitxer de destinació
 ERR_EMPTY_CHECKSUM=Suma de comprovació no pot estar buida
+ERR_COMPRESSED_FILE_NOT_FOUND=No s'ha trobat el fitxer comprimit
