--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_de_DE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_de_DE.properties
@@ -123,3 +123,4 @@ ERR_FILE_TO_PATCH_NOT_PATCHABLE=Die Datei kann nicht korrigiert werden
 ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=Falsche Prüfsumme
 ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=Die komprimierte Datei kann nicht direkt ausgebessert werden. Geben Sie eine Zieldatei
 ERR_EMPTY_CHECKSUM=Prüfsumme kann nicht leer sein
+ERR_COMPRESSED_FILE_NOT_FOUND=Komprimierte Datei nicht gefunden
