--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_es_ES.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_es_ES.properties
@@ -123,3 +123,4 @@ ERR_FILE_TO_PATCH_NOT_PATCHABLE=No se puede aplicar el parche al archivo
 ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=Suma de comprobación incorrecta
 ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=El archivo comprimido no se puede parchear directamente. Especifique un archivo de destino
 ERR_EMPTY_CHECKSUM=Suma de comprobación no puede estar vacía
+ERR_COMPRESSED_FILE_NOT_FOUND=El archivo comprimido no encontrado
