--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fi_FI.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fi_FI.properties
@@ -123,3 +123,4 @@ ERR_FILE_TO_PATCH_NOT_PATCHABLE=Tiedostoa ei voi paikata
 ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=Virheellinen tarkistussumma
 ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=Pakattu tiedosto ei voi paikata suoraan. Määritä kohdetiedosto
 ERR_EMPTY_CHECKSUM=Tarkistussumma ei voi olla tyhjä
+ERR_COMPRESSED_FILE_NOT_FOUND=Pakattu tiedosto ei löytynyt
