--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fr_FR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_fr_FR.properties
@@ -123,3 +123,4 @@ ERR_FILE_TO_PATCH_NOT_PATCHABLE=Impossible d'appliquer le correctif au fichier
 ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=Somme de contrôle incorrecte
 ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=Le fichier compressé ne peut pas être directement patché. Spécifiez un fichier de destination
 ERR_EMPTY_CHECKSUM=Le champ de somme de contrôle ne peut pas être vide
+ERR_COMPRESSED_FILE_NOT_FOUND=Le fichier compressé n'a pas pu être trouvé
