--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_it_IT.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_it_IT.properties
@@ -123,3 +123,4 @@ ERR_FILE_TO_PATCH_NOT_PATCHABLE=Impossibile applicare la patch al file
 ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=Checksum errato
 ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=Il file compresso non può essere patchato direttamente. Specifica un file di destinazione
 ERR_EMPTY_CHECKSUM=Il campo di checksum non può essere vuoto
+ERR_COMPRESSED_FILE_NOT_FOUND=File compresso non trovato
