--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_nl_NL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_nl_NL.properties
@@ -123,3 +123,4 @@ ERR_FILE_TO_PATCH_NOT_PATCHABLE=Het bestand kan niet worden gecorrigeerd
 ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=Onjuiste controlesom
 ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=Het gecomprimeerde bestand kan niet direct worden gepatcht. Geef een bestemming bestand
 ERR_EMPTY_CHECKSUM=De controlesom mag niet leeg zijn
+ERR_COMPRESSED_FILE_NOT_FOUND=Gecomprimeerd bestand niet gevonden
