--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pl_PL.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pl_PL.properties
@@ -123,3 +123,4 @@ ERR_FILE_TO_PATCH_NOT_PATCHABLE=Nie mo\u017Cna zastosowa\u0107 poprawk\u0119 do 
 ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=Nieprawid\u0142owa suma kontrolna
 ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=Skompresowany plik nie mo\u017Ce by\u0107 poprawione bezpo\u015Brednio. Okre\u015Bli\u0107 plik docelowy
 ERR_EMPTY_CHECKSUM=Suma kontrolna nie mo\u017Ce by\u0107 pusty
+ERR_COMPRESSED_FILE_NOT_FOUND=Nie mo\u017Cna odnale\u017A\u0107 plik skompresowany
