--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pt_BR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_pt_BR.properties
@@ -123,3 +123,4 @@ ERR_FILE_TO_PATCH_NOT_PATCHABLE=O arquivo não pode ser corrigido
 ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=Soma de verificação incorreta
 ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=O arquivo compactado não pode ser corrigido diretamente. Especifique um arquivo de destino
 ERR_EMPTY_CHECKSUM=Campo de soma de verificação não pode estar vazio
+ERR_COMPRESSED_FILE_NOT_FOUND=Arquivo compactado não encontrado
