--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_sv_SE.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_sv_SE.properties
@@ -123,3 +123,4 @@ ERR_FILE_TO_PATCH_NOT_PATCHABLE=Filen kan inte korrigeras
 ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=Felaktig kontrollsumma
 ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=Den komprimerade filen kan inte lagas direkt. Ange en destination fil
 ERR_EMPTY_CHECKSUM=Kontrollsumma fält får inte vara tomt
+ERR_COMPRESSED_FILE_NOT_FOUND=Komprimerad fil hittades inte
