--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_zh_TW.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_zh_TW.properties
@@ -123,3 +123,4 @@ ERR_FILE_TO_PATCH_NOT_PATCHABLE=\u7121\u6CD5\u5C07\u4FEE\u88DC\u7A0B\u5E8F\u61C9
 ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=\u7121\u6548\u7684\u7E3D\u548C\u6AA2\u67E5\u78BC
 ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=\u8A72\u58D3\u7E2E\u6587\u4EF6\u4E0D\u80FD\u76F4\u63A5\u6253\u88DC\u4E01\u3002\u6307\u5B9A\u76EE\u6A19\u6587\u4EF6
 ERR_EMPTY_CHECKSUM=\u7E3D\u548C\u6AA2\u67E5\u78BC\u6B04\u4F4D\u4E0D\u80FD\u70BA\u7A7A
+ERR_COMPRESSED_FILE_NOT_FOUND=\u6C92\u6709\u767C\u73FE\u58D3\u7E2E\u6A94
