--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ja_JP.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ja_JP.properties
@@ -123,3 +123,4 @@ ERR_FILE_TO_PATCH_NOT_PATCHABLE=\u30D5\u30A1\u30A4\u30EB\u306B\u30D1\u30C3\u30C1
 ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=\u6B63\u3057\u304F\u306A\u3044\u30C1\u30A7\u30C3\u30AF\u30B5\u30E0
 ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=\u5727\u7E2E\u3055\u308C\u305F\u30D5\u30A1\u30A4\u30EB\u306F\u3001\u76F4\u63A5\u30D1\u30C3\u30C1\u3092\u9069\u7528\u3059\u308B\u3053\u3068\u306F\u3067\u304D\u307E\u305B\u3093\u3002 \u5148\u306E\u30D5\u30A1\u30A4\u30EB\u3092\u6307\u5B9A\u3057\u307E\u3059
 ERR_EMPTY_CHECKSUM=\u30C1\u30A7\u30C3\u30AF\u30B5\u30E0\u3092\u7A7A\u306B\u3059\u308B\u3053\u3068\u306F\u3067\u304D\u307E\u305B\u3093
+ERR_COMPRESSED_FILE_NOT_FOUND=\u5727\u7E2E\u30D5\u30A1\u30A4\u30EB\u304C\u898B\u3064\u304B\u308A\u307E\u305B\u3093
