--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ko_KR.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_ko_KR.properties
@@ -123,3 +123,4 @@ ERR_FILE_TO_PATCH_NOT_PATCHABLE=\uD30C\uC77C\uC5D0 \uD328\uCE58\uB97C \uC801\uC6
 ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=\uC798\uBABB\uB41C \uCCB4\uD06C\uC12C
 ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=\uC555\uCD95 \uB41C \uD30C\uC77C\uC740 \uC9C1\uC811 \uD328\uCE58 \uD560 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4. \uB300\uC0C1 \uD30C\uC77C\uC744 \uC9C0\uC815\uD569\uB2C8\uB2E4
 ERR_EMPTY_CHECKSUM=\uCCB4\uD06C\uC12C\uC740 \uBE44\uC6CC \uB458 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4
+ERR_COMPRESSED_FILE_NOT_FOUND=\uC555\uCD95\uB41C \uD30C\uC77C \uCC3E\uC744 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4
