--- a/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_zh_CN.properties
+++ b/java/ui/src/info/msxlaunchers/openmsx/launcher/ui/view/swing/language/Common_zh_CN.properties
@@ -123,3 +123,4 @@ ERR_FILE_TO_PATCH_NOT_PATCHABLE=\u65E0\u6CD5\u5C06\u4FEE\u8865\u7A0B\u5E8F\u5E94
 ERR_SOURCE_FILE_CHECKSUM_NOT_MATCH=\u4E0D\u6B63\u786E\u7684\u6821\u9A8C\u548C
 ERR_ZIP_SOURCE_FILE_CANNOT_BE_PATCHED_DIRECTLY=\u8BE5\u538B\u7F29\u6587\u4EF6\u4E0D\u80FD\u76F4\u63A5\u6253\u8865\u4E01\u3002\u6307\u5B9A\u76EE\u6807\u6587\u4EF6
 ERR_EMPTY_CHECKSUM=\u603B\u548C\u68C0\u67E5\u7801\u680F\u4F4D\u4E0D\u80FD\u4E3A\u7A7A
+ERR_COMPRESSED_FILE_NOT_FOUND=\u6CA1\u6709\u53D1\u73B0\u538B\u7F29\u6587\u4EF6
